test/positive/feature_arraylength.java

public class feature_arraylength {
  public feature_arraylength() {}
  public int m() {
    int[] x = new int[42];
    return x.length;
  }
}

