test/negative/IGNOREfeature_arraymethodcall.java

public class feature_arraymethodcall {
  public feature_arraymethodcall() {}
  public void m() {
    int[] x = new int[42];
    x.clone();
  }
}

